--- a/package.json
+++ b/package.json
@@ -1,3 +1,15 @@
 {
-    "private": true
+    "private": true,
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build"
+    },
+    "devDependencies": {
+        "laravel-vite-plugin": "^0.8.1",
+        "vite": "^4.5.1"
+    },
+    "dependencies": {
+        "axios": "^1.6.2",
+        "bootstrap": "^5.3.2"
+    }
 }
