--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "vite": "^4.5.1"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.1",
         "axios": "^1.6.2",
         "bootstrap": "^5.3.2"
     }
