--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.1",
+        "axios": "^1.6.2",
+        "bootstrap": "^5.3.2"
     },
     "devDependencies": {
         "laravel-vite-plugin": "^0.8.1",
         "vite": "^4.5.1"
     },
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.5.1",
-        "axios": "^1.6.2",
-        "bootstrap": "^5.3.2"
+    "private": true,
+    "scripts": {
+        "build": "vite build",
+        "dev": "vite"
     }
 }
